k8s/exchange-rate-app/deployment-v1-with-cm.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  exappv1
  labels:
    name:  exappv1
spec:
  replicas: 2
  selector:
    matchLabels:
      name: exappv1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name:  exappv1
    spec:
      containers:
      - image:  balanus/exapp:v1
        name:  exappv1
        resources:
          requests:
            cpu: "50m"
            memory: "100M"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  5000
          name:  exappv1
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
        - name: data
          emptyDir: {}
      restartPolicy: Always
