k8s/exchange-rate-app/deployment-with-secret.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  exapp
  labels:
    name:  exapp
spec:
  replicas: 2
  selector:
    matchLabels:
      name: exapp
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name:  exapp
    spec:
      containers:
      - image:  balanus/exapp@sha256:28b6a879186893caadd7ae1eca3d700176d3f59585d84ad6093ba5b34d9f9baf
        name:  exapp
        resources:
          requests:
            cpu: "50m"
            memory: "100M"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  5000
          name:  exapp
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
        - name: data
          emptyDir: {}
      restartPolicy: Always
