k8s/exchange-rate-app/ingress-01.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: exapp-only-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: exapp.157.230.196.217.nip.io
    http:
      paths:
        - path: /
          backend:
            serviceName: exappsvc
            servicePort: 80
